# HelloVulkanCompute

./: CMakeLists.txt  Flow.txt  HelloVulkanCompute.sln  HelloVulkanCompute.vcxproj  HelloVulkanCompute.vcxproj.filters  README.md  SimpleCopy.cl  Vulkan Architecture.txt  main.cpp
resources/: SimpleCopy-map.csv  SimpleCopy.cl  SimpleCopy.spir  SimpleCopy.spirasm  SimpleCopy.spv  SimpleCopy.spvasm  rx480_vulkan_features.txt  todo.txt
scripts/: ShaderCompile.py
src/: DescriptorSets.cpp  DescriptorSets.h  Utils.hpp  main.cpp
